fixed text wrapping on log table

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -46,6 +46,11 @@
 	}
 }
 
+.table {
+	table-layout: fixed;
+	word-wrap: break-word;
+}
+
 
 .admin-content {
 	height: 100%;
